# fittrack

./: README.md  test_dashboard.py  test_social.py  test_weight.py  verify_backend.py  verify_output.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  validate_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_missing_constraints.py  0003_weight_logs_soft_delete.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  exercises.py  feed.py  follows.py  goals.py  nutrition.py  profile.py  social.py  users.py  (+2 more)
backend/app/core/: config.py  constants.py  limiter.py  security.py
backend/app/db/: base.py  indian_foods.py  seeds.py  session.py
backend/app/models/: exercise.py  feed.py  goal.py  mixins.py  nutrition.py  profile.py  refresh_token.py  social.py  user.py  weight.py  workout.py
backend/app/repositories/: exercise_repository.py  feed_repository.py  goal_repository.py  nutrition_repository.py  profile_repository.py  refresh_token_repository.py  social_repository.py  user_repository.py  weight_repository.py  workout_repository.py
backend/app/schemas/: auth.py  dashboard.py  exercise.py  goal.py  nutrition.py  profile.py  social.py  weight.py  workout.py
backend/app/services/: auth_service.py  dashboard_service.py  exercise_service.py  feed_service.py  food_search_service.py  goal_service.py  nutrition_service.py  profile_service.py  social_service.py  weight_service.py  workout_service.py
(+134 files in other folders)
